# ovc

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  rename_to_ovc.sh  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: PRD.md  api-reference.md  architecture.md  examples.md  index.html  index.md  performance-analysis.md  road-qc-plan.md  tutorials.md  user-guide.md  workflow.html
docs/tutorials/: 01-first-qc-check.md  02-working-with-local-data.md  02-working-with-osm-data.md  03-custom-configuration.md  04-building-qc-workflow.md  05-analyzing-and-fixing-issues.md  06-integration-with-qgis.md  07-automating-qc-with-python.md  08-road-network-qc.md
outputs_giza/maps/: giza.html
outputs_giza/reports/: giza_metrics.csv
ovc/: __init__.py
ovc/checks/: __init__.py  boundary_overlap.py  geometry_quality.py  overlap.py  road_conflict.py
ovc/core/: __init__.py  config.py  crs.py  geometry.py  logging.py  spatial_index.py
ovc/export/: __init__.py  geopackage.py  maps.py  pipeline.py  tables.py  webmap.py
ovc/loaders/: boundaries.py  buildings.py  roads.py
ovc/metrics/: __init__.py  overlap.py  summary.py
ovc/precheck/: __init__.py  runner.py
ovc/road_qc/: README.md  __init__.py  config.py  metrics.py  pipeline.py  webmap.py
ovc/road_qc/checks/: __init__.py  dangles.py  disconnected.py  self_intersection.py
scripts/: run_qc.py
tests/: test_crs.py  test_geometry_quality.py  test_overlap.py  test_pipeline.py  test_precheck.py  test_road_qc.py
tests/data/: sample_boundary.geojson  sample_buildings.geojson  sample_roads.geojson
